--- a/3_player_fair_div.ipynb
+++ b/3_player_fair_div.ipynb
@@ -50,9 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named matplotlib.pyplot",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-2b415bf924e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mOS\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrun_OS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named matplotlib.pyplot"
+     ]
+    }
+   ],
    "source": [
     "from agent import Agent\n",
     "from agent import Allocation\n",
@@ -61,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +81,13 @@
      "output_type": "stream",
      "text": [
       "Ranks[object] : \n",
-      "[3, 6, 9, 4, 1, 8, 5, 2, 7]\n",
-      "[1, 6, 8, 9, 3, 7, 5, 4, 2]\n",
-      "[7, 5, 1, 3, 8, 9, 6, 4, 2]\n",
+      "[3, 1, 2, 4, 6, 5, 7, 8, 9]\n",
+      "[8, 3, 4, 9, 2, 5, 7, 6, 1]\n",
+      "[8, 3, 5, 1, 4, 6, 2, 7, 9]\n",
       "Objects[rank] : \n",
-      "[4, 7, 0, 3, 6, 1, 8, 5, 2]\n",
-      "[0, 8, 4, 7, 6, 1, 5, 2, 3]\n",
-      "[2, 8, 3, 7, 1, 6, 0, 4, 5]\n"
+      "[1, 2, 0, 3, 5, 4, 6, 7, 8]\n",
+      "[8, 4, 1, 2, 5, 7, 6, 0, 3]\n",
+      "[3, 6, 1, 4, 2, 5, 7, 0, 8]\n"
      ]
     }
    ],
@@ -97,24 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nb allocation found: 2\n",
-      "[[4, 7, 1], [0, 8, 5], [2, 3, 6]]\n",
-      "Agents (  0  ,  2 ):  [ 1  ,  6 ]\n",
-      "False\n",
-      "[18, 17, 17]\n",
-      "[[4, 7, 6], [0, 8, 5], [2, 3, 1]]\n",
-      "True\n",
-      "[19, 17, 18]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "allocation = run_OS([agent_1,agent_2,agent_3], nb_objets)\n",
     "print \"nb allocation found:\" , len(allocation)\n",
@@ -126,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named matplotlib.pyplot",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-b1016a45af08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'some numbers'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named matplotlib.pyplot"
+     ]
+    }
+   ],
    "source": []
   },
   {
