Added processing and time to cell

--- a/3_player_fair_div.ipynb
+++ b/3_player_fair_div.ipynb
@@ -2710,15 +2710,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing: 87.4%\n",
-      "Approximate remaining time: 0.0 minutes and 6.958123549642542 seconds\n"
+      "100% processed !\n",
+      "Total time elapsed: 0.0 minutes and 53.51916193962097 seconds\n"
      ]
     }
    ],
@@ -2729,6 +2729,9 @@
     "total_allocs_OS = [0]*(nb_objets_max//3)\n",
     "total_allocs_BU = [0]*(nb_objets_max//3)\n",
     "\n",
+    "total_unique_allocs_OS = [0]*(nb_objets_max//3)\n",
+    "total_unique_allocs_BU = [0]*(nb_objets_max//3)\n",
+    "\n",
     "total_borda_pareto_optimal_OS = [0]*(nb_objets_max//3)\n",
     "total_borda_pareto_optimal_BU = [0]*(nb_objets_max//3)\n",
     "\n",
@@ -2736,6 +2739,8 @@
     "total_borda_envy_free_BU = [0]*(nb_objets_max//3)\n",
     "\n",
     "total_time = 0\n",
+    "\n",
+    "boucle = 0;\n",
     "\n",
     "for nb_objets in range(3, nb_objets_max + 1, 3):\n",
     "    for i in range(0, nb_rep):\n",
@@ -2750,7 +2755,13 @@
     "            try:\n",
     "                allocations_OS = run_OS(agents, nb_objets)\n",
     "                allocations_BU = run_BU(agents, nb_objets)\n",
-    "\n",
+    "                \n",
+    "                if(len(allocations_OS) == 1):\n",
+    "                    total_unique_allocs_OS[nb_objets//3 - 1] +=1\n",
+    "                    \n",
+    "                if(len(allocations_BU) == 1):\n",
+    "                    total_unique_allocs_BU[nb_objets//3 - 1] +=1\n",
+    "                    \n",
     "                for alloc in allocations_OS:\n",
     "                    total_allocs_OS[nb_objets//3 - 1] += len(allocations_OS)\n",
     "                    total_borda_pareto_optimal_OS[nb_objets//3 - 1] += len([al for al in allocations_OS if al.borda_pareto_optimal()])\n",
@@ -2769,13 +2780,12 @@
     "            \n",
     "        end = time.time()\n",
     "        total_time += (end - start)\n",
-    "        remaining = (total_time/(nb_objets//3*i + 1) * ((nb_objets_max//3*nb_rep) - (nb_objets//3*i)))\n",
+    "        remaining = ( total_time / (boucle*nb_rep + i + 1) * (nb_objets_max//3*nb_rep - boucle*nb_rep + i) )\n",
     "        clear_output(wait=True)\n",
-    "        print(\"Processing: \" + str((nb_objets//3*i)/(nb_objets_max//3*nb_rep) * 100) + '%')\n",
+    "        print(\"Processing: \" + str( (boucle*nb_rep + i) / (nb_objets_max//3*nb_rep) *100) + '%')\n",
     "        print(\"Approximate remaining time: \" + str(remaining//60) + \" minutes and \" + str(remaining%60) + \" seconds\")\n",
-    "            \n",
     "        \n",
-    "\n",
+    "    boucle += 1\n",
     "# Final print\n",
     "clear_output(wait=True)\n",
     "print(\"100% processed !\")\n",
@@ -2784,15 +2794,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[60150, 341337, 1551906] [46434, 265004, 1181854] [5494, 9411, 18980]\n",
-      "[87651, 90000, 90000] [72717, 48819, 27435] [14658, 2679, 786]\n"
+      "[57549, 338131] [44641, 261312] [5569, 8515]\n",
+      "[87165, 90000] [72057, 48123] [15288, 2475]\n"
      ]
     },
     {
