--- a/3_player_fair_div.ipynb
+++ b/3_player_fair_div.ipynb
@@ -2794,15 +2794,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[57549, 338131] [44641, 261312] [5569, 8515]\n",
-      "[87165, 90000] [72057, 48123] [15288, 2475]\n"
+      "[58542, 357372] [2234, 3167] [45250, 275144] [5638, 8931]\n",
+      "[87471, 90000] [0, 0] [72672, 47952] [15261, 2631]\n"
      ]
     },
     {
@@ -2819,8 +2819,8 @@
     }
    ],
    "source": [
-    "print(total_allocs_OS, total_borda_pareto_optimal_OS, total_borda_envy_free_OS)\n",
-    "print(total_allocs_BU, total_borda_pareto_optimal_BU, total_borda_envy_free_BU)\n",
+    "print(total_allocs_OS, total_unique_allocs_OS, total_borda_pareto_optimal_OS, total_borda_envy_free_OS)\n",
+    "print(total_allocs_BU, total_unique_allocs_BU, total_borda_pareto_optimal_BU, total_borda_envy_free_BU)\n",
     "\n",
     "plt.plot([1, 2, 3, 4])\n",
     "plt.ylabel('some numbers')\n",
