--- a/3_player_fair_div.ipynb
+++ b/3_player_fair_div.ipynb
@@ -2808,10 +2808,6 @@
     }
    ],
    "source": [
-    "#print(total_allocs_OS, total_borda_pareto_optimal_OS, total_borda_envy_free_OS)\n",
-    "#print(total_allocs_BU, total_borda_pareto_optimal_BU, total_borda_envy_free_BU)\n",
-    "\n",
-    "#result_avg=[[i/nb_rep for i in total_allocs_OS], [i/nb_rep] for i in total_allocs_BU]\n",
     "result_avg = [ [i/nb_rep for i in total_allocs_OS], [j/nb_rep for j in total_allocs_BU] ]\n",
     "result_uni=[[total_unique_allocs_OS[i]/total_allocs_OS[i] for i in range(len(total_allocs_OS))], [total_unique_allocs_BU[i]/total_allocs_BU[i] for i in range(len(total_allocs_OS))]]\n",
     "result_env=[[total_borda_envy_free_OS[i]/total_allocs_OS[i] for i in range(len(total_allocs_OS))], [total_borda_envy_free_BU[i]/total_allocs_BU[i] for i in range(len(total_allocs_OS))]]\n",
@@ -2898,7 +2894,7 @@
     "    plt.plot(xp,result_par[i],'-*',label=name_label[i])\n",
     "\n",
     "plt.legend()\n",
-    "plt.xlabel('Nombre dobjets')\n",
+    "plt.xlabel('Nombre d objets')\n",
     "plt.title('Pourcentage de Bordas Pareto optimal')\n",
     "plt.show()\n",
     "\n",
@@ -2909,6 +2905,21 @@
     "plt.xlabel('Nombre dobjets')\n",
     "plt.title('Pourcentage de Bordas Envy-Free')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nombre moyen d'allocations\n",
+    "L'algorithme OS produit comme attendu un grand nombre d'allocations ce qui est cohérent car il y a beaucoup de chemin pour atteindre les différentes allocations possibles.\n",
+    "L'algorithme BU produit un nombre quasiment fixe d'allocations ce qui est dû au fait que cet algorithme ne possède que 9 chemins différents au plus pour un problème à 3 agents.\n",
+    "# Nombre moyen d'allocations uniques\n",
+    "La diminution est logique, en effet plus il y a d'objets, plus il y a d'allocations possibles et donc moins il y a, en tout cas pour les algorithmes sélectionnés, de chance d'obtenir une allocation unique.\n",
+    "# Pourcentage de Borda Pareto optimal\n",
+    "L'algorithme OS apporte clairement de meilleure performances au regard de la production d'allocations Pareto optimale, ce qui s'explique bien par le fait que l'algorithme cherche toujours à attribuer à chaque agent les meilleurs objets disponible pour ce dernier.\n",
+    "# Pourcentage de Bordas envy-free\n",
+    "Les courbes obtenues montrent que plus le nombre d'objet est important, moins les algorithmes sélectionnés produisent des allocations envy-free."
    ]
   },
   {
